# se_data_ai_image_embedding_example

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
modules/: utils.py
notebooks/: data_preprocessing.ipynb  generate_embeddings.ipynb  image_search.ipynb  upload_data_to_postgresql.ipynb
