[project]
name = "se-data-ai-image-embedding-example"
version = "0.1.0"
description = "Example using AI Vision multi-modal embeddings to vectorize images and store them in PostgreSQL with pgvector extension."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-ai-inference[opentelemetry]>=1.0.0b9",
    "azure-ai-projects>=1.0.0",
    "azure-core>=1.35.1",
    "azure-identity>=1.25.1",
    "azure-storage-blob>=12.26.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "psycopg2>=2.9.11",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "unidecode>=1.4.0",
]
